testsuite/poke.pkl/int-union-type-diag-3.pk
/* { dg-do compile } */

type Foo =
  union int<32>
  {
    string je; /* { dg-error "invalid field.*\n.*expected integral, offset, integral struct or union" } */
  };
